# RatatuiSVG

./: Cargo.toml  README.md  test.txt
.github/workflows/: rust.yml
src/: canvas.rs  draw.rs  main.rs  svg.rs  widget.rs
