[package]
name = "svgtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
crossterm = "0.26.1"
ratatui = {version = "0.20.1", git = "https://github.com/V8gaming/ratatui.git"}
regex = {version = "1.7.1", features = ["pattern"]}
lazy_static = "1.4.0"
xml-rs = "0.8.4"
base64 = "0.21.0"
itertools = "0.10.5"
